--- a/samples/public/TestingPlatformExamples/TestingPlatformExplorer/TestingPlatformExplorer.csproj
+++ b/samples/public/TestingPlatformExamples/TestingPlatformExplorer/TestingPlatformExplorer.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0-android</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>TestingPlatformExplorer</RootNamespace>
@@ -9,16 +9,12 @@
 
 
     <OutputType>Exe</OutputType>
-    <RootNamespace>MauiApp1</RootNamespace>
     <UseMaui>true</UseMaui>
     <SingleProject>true</SingleProject>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <!-- https://github.com/CommunityToolkit/Maui/issues/2205 -->
     <NoWarn>XC0103</NoWarn>
     <MauiEnableXamlCBindingWithSourceCompilation>true</MauiEnableXamlCBindingWithSourceCompilation>
-
-
 
     <!-- App Identifier -->
     <ApplicationId>com.companyname.mauiapp1</ApplicationId>
@@ -63,11 +59,11 @@
     </None>
   </ItemGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <ProjectCapability Include="DiagnoseCapabilities" />
     <ProjectCapability Include="TestingPlatformServer" />
     <ProjectCapability Include="TestContainer" />
-  </ItemGroup>
+  </ItemGroup>-->
 
   <ItemGroup>
     <MauiXaml Update="App.xaml">
