--- a/samples/public/BlankAndroid/AndroidManifest.xml
+++ b/samples/public/BlankAndroid/AndroidManifest.xml
@@ -3,4 +3,10 @@
   <application android:allowBackup="true" android:icon="@mipmap/appicon" android:label="@string/app_name" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true">
   </application>
   <uses-permission android:name="android.permission.INTERNET" />
+  
+  <!-- Instrumentation for running tests -->
+  <instrumentation
+    android:name="blankandroid.TestInstrumentation"
+    android:targetPackage="com.companyname.BlankAndroid"
+    android:label="Test Instrumentation" />
 </manifest>
